# Clipboard_Manger_Rusty

./: Cargo.toml  README.md
src/: main.rs
