[package]
name = "clipboard_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.24"
egui = "0.24"
clipboard = "0.5"
global-hotkey = "0.4"
serde = { version = "1.0", features = ["derive"] }

# Platform-specific dependencies
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[target.'cfg(unix)'.dependencies]
x11 = { version = "2.19", features = ["xlib"] }